# call-my-agent

./: .gitignore  BUILD_LOG.md  NEXT_SESSION_HANDOFF.md  README.md  pyproject.toml
app/: __init__.py  clients.py  config.py  db.py  main.py  services.py
artifacts/: 2026-05-17-real-world-execution-packet.html  2026-05-17-sent-outreach-ledger.html
scripts/: export_sent_outreach.py  probe_integrations.py  run_japan_execution_queue.py  run_real_world_outreach.py  seed_initial_tokyo_sent.py  send_tokyo_outreach.py  unstick_sf_task.py
