[project]
name = "agentphone-call-delegator"
version = "0.1.0"
description = "Domestic call delegation MVP for the YC x AgentPhone hackathon"
requires-python = ">=3.11"
dependencies = [
  "agentmail>=0.0.16",
  "browser-use-sdk>=0.1.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
agentphone-mvp = "app.main:main"
